# ncnn_yolov5_paddleocr_android

./: CMakeLists.txt  best17-sim.param  common.cpp  nanodet.cpp  nanodet.h  nanodetncnn.cpp  ndkcamera.cpp  ndkcamera.h  ocrrangle.h
